# mac_activity_logger

./: .gitignore  AGENT.md  README.md  main.py  pyproject.toml  verify_core_features.py
scripts/: download_model.py
src/logger/application/: controller.py  interfaces.py  summarization_use_case.py  use_cases.py
src/logger/domain/: entities.py  interfaces.py  services.py
src/logger/infrastructure/ai/: utils.py  whisper_service.py
src/logger/infrastructure/llm/: gemma_provider.py
src/logger/infrastructure/mac_os/: accessibility.py  audio.py  media_loader.py  screen.py  vision.py
src/logger/infrastructure/persistence/: jsonl_logger.py
src/logger/presentation/: cli.py  file_ocr_cli.py  gemma_cli.py  gui.py
src/logger/resources/prompts/: summarize_audio_activity.txt  summarize_daily_activity.txt  summarize_visual_activity.txt
swift_app/: Package.resolved  Package.swift  bundle.sh
swift_app/Sources/ActivityLogger/: App.swift  ContentView.swift  Info.plist
swift_app/Sources/ActivityLogger/AI/: Gemma.swift  LLMService.swift  SpeechService.swift
swift_app/Sources/ActivityLogger/Core/: ActivityController.swift  JsonlLogger.swift  OCRService.swift  ScreenCaptureService.swift  WindowService.swift
swift_app/Sources/ActivityLogger/UI/: DashboardView.swift  HistoryView.swift  SettingsView.swift
tests/e2e/: test_gui.py
