[project]
name = "mac-activity-logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0,<2.4",
    "pyobjc-framework-applicationservices>=12.1",
    "pyobjc-framework-avfoundation>=12.1",
    "pyobjc-framework-cocoa>=12.1",
    "pyobjc-framework-quartz>=12.1",
    "pyobjc-framework-speech>=12.1",
    "pyobjc-framework-vision>=12.1",
    "mlx",
    "mlx-whisper",
    "sounddevice",
    "numba>=0.60.0",
    "safetensors>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
